--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <groupId>eu.fbk.knowledgestore</groupId>
   <artifactId>ks</artifactId>
   <packaging>pom</packaging>
-  <version>1.2-SNAPSHOT</version>
+  <version>1.2</version>
 
   <name>ks</name>
   <description>The KnowledgeStore</description>
@@ -174,25 +174,32 @@
     <url>https://newsreader.fbk.eu/trac/browser/newsreader/Code/KnowledgeStore/trunk</url>
   </scm>
 
+  <!--<distributionManagement>-->
+    <!--<repository>-->
+      <!--<id>repoks</id>-->
+      <!--<name>Repository for project output artifacts</name>-->
+      <!--<url>${repo-path}</url>-->
+      <!--<layout>default</layout>-->
+      <!--<uniqueVersion>false</uniqueVersion>-->
+    <!--</repository>-->
+    <!--<snapshotRepository>-->
+      <!--<id>repoks</id>-->
+      <!--<name>Repository for project output artifacts</name>-->
+      <!--<url>${repo-path}</url>-->
+      <!--<layout>default</layout>-->
+      <!--<uniqueVersion>false</uniqueVersion>-->
+    <!--</snapshotRepository>-->
+    <!--<site>-->
+      <!--<id>siteks</id>-->
+      <!--<url>${site-path}/</url>-->
+    <!--</site>-->
+  <!--</distributionManagement>-->
+
   <distributionManagement>
-    <repository>
-      <id>repoks</id>
-      <name>Repository for project output artifacts</name>
-      <url>${repo-path}</url>
-      <layout>default</layout>
-      <uniqueVersion>false</uniqueVersion>
-    </repository>
     <snapshotRepository>
-      <id>repoks</id>
-      <name>Repository for project output artifacts</name>
-      <url>${repo-path}</url>
-      <layout>default</layout>
-      <uniqueVersion>false</uniqueVersion>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
     </snapshotRepository>
-    <site>
-      <id>siteks</id>
-      <url>${site-path}/</url>
-    </site>
   </distributionManagement>
 
   <repositories>
@@ -1103,7 +1110,7 @@
             <additionalProjectnatures>
               <projectnature>net.sf.eclipsecs.core.CheckstyleNature</projectnature>
             </additionalProjectnatures>-->
-            <failOnError>false</failOnError>
+            <!--<failOnError>false</failOnError>-->
           </configuration>
         </plugin>
         <plugin>
@@ -1180,6 +1187,34 @@
     </pluginManagement>
 
     <plugins>
+
+      <plugin>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+        <version>1.6.3</version>
+        <extensions>true</extensions>
+        <configuration>
+          <serverId>ossrh</serverId>
+          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+          <autoReleaseAfterClose>true</autoReleaseAfterClose>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+        <version>1.5</version>
+        <executions>
+          <execution>
+            <id>sign-artifacts</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>sign</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+
       <plugin>
         <!-- The following goal is necessary in order to allow child modules to
              inherit the site descriptor of the parent project -->
@@ -1238,34 +1273,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
         <version>${site-plugin.version}</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>${project-info-plugin.version}</version>
-        <configuration>
-          <!-- takes to long to generate... -->
-          <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
-        </configuration>
-        <reportSets>
-          <reportSet>
-            <reports>
-              <!-- Note: order of entries affect the order of menu items -->
-              <report>index</report>
-              <!--<report>summary</report>-->
-
-              <!-- Disabled because non-informative or redundant -->
-              <!-- <report>index</report> -->
-              <!-- <report>summary</report> -->
-              <!-- <report>distribution-management</report> -->
-              <!-- <report>plugin-management</report> -->
-
-              <!-- Disabled because referring to unavailable features -->
-              <!-- <report>cim</report> -->
-              <!-- <report>issue-tracking</report> -->
-            </reports>
-          </reportSet>
-        </reportSets>
       </plugin>
     </plugins>
   </reporting>
@@ -1471,232 +1478,11 @@
               </reportSet>
             </reportSets>
           </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jxr-plugin</artifactId>
-            <version>${jxr-plugin.version}</version>
-            <configuration>
-              <linkJavadoc>false</linkJavadoc>
-              <!-- as javadoc is not generated for tests -->
-              <stylesheet>${basedir}/${parent-path}/src/site/xref.css</stylesheet>
-              <excludes>
-                <exclude>**/populator/naf/model/*.java</exclude>
-              </excludes>
-            </configuration>
-            <reportSets>
-              <reportSet>
-                <reports>
-                  <report>jxr</report>
-                  <report>test-jxr</report>
-                  <report>aggregate</report>
-                  <report>test-aggregate</report>
-                </reports>
-              </reportSet>
-            </reportSets>
-          </plugin>
-          <!-- BROKEN PLUGIN, NO REPLACEMENT AS OF DEC 2014
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>javancss-maven-plugin</artifactId>
-            <version>${javancss-plugin.version}</version>
-            <configuration>
-              <linkXRef>true</linkXRef>
-              <xrefLocation>${basedir}/${parent-path}/target/site/xref</xrefLocation>
-              <excludes>
-                <- <exclude>**/model/*.java</exclude> ->
-                <exclude>eu/fbk/knowledgestore/populator/naf/model/*.java</exclude>
-              </excludes>
-            </configuration>
-          </plugin>
-          -->
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>jdepend-maven-plugin</artifactId>
-            <version>${jdepend-plugin.version}</version>
-          </plugin>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>versions-maven-plugin</artifactId>
-            <version>${versions-plugin.version}</version>
-            <inherited>false</inherited>
-            <reportSets>
-              <reportSet>
-                <reports>
-                  <report>property-updates-report</report>
-
-                  <!-- Disabled as subsumed by the previous one -->
-                  <!-- <report>dependency-updates-report</report> -->
-                  <!-- <report>plugin-updates-report</report> -->
-                </reports>
-              </reportSet>
-            </reportSets>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-checkstyle-plugin</artifactId>
-            <version>${checkstyle-plugin.version}</version>
-            <configuration>
-              <enableRSS>true</enableRSS>
-              <enableRulesSummary>false</enableRulesSummary>
-              <enableFilesSummary>false</enableFilesSummary>
-              <enableSeveritySummary>true</enableSeveritySummary>
-              <includeTestSourceDirectory>true</includeTestSourceDirectory>
-              <configLocation>file:///${basedir}/${parent-path}/src/settings/checkstyle.xml</configLocation>
-              <linkXRef>true</linkXRef>
-            </configuration>
-            <reportSets>
-              <reportSet>
-                <reports>
-                  <report>checkstyle</report>
-                  <!-- <report>checkstyle-aggregate</report> -->
-                </reports>
-              </reportSet>
-            </reportSets>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-report-plugin</artifactId>
-            <version>${surefire-report-plugin.version}</version>
-            <inherited>true</inherited>
-            <configuration>
-              <aggregate>${aggregate}</aggregate>
-              <alwaysGenerateSurefireReport>true</alwaysGenerateSurefireReport>
-              <linkXRef>true</linkXRef>
-            </configuration>
-          </plugin>
-          <!--
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>cobertura-maven-plugin</artifactId>
-            <version>${cobertura-plugin.version}</version>
-            <configuration>
-              <aggregate>${aggregate}</aggregate>
-              <forceMojoExecution>true</forceMojoExecution>
-              <quiet>true</quiet>
-            </configuration>
-          </plugin>
-          -->
-          <!-- BROKEN IF COMPILE WITH JDK8
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>findbugs-maven-plugin</artifactId>
-            <version>${findbugs-plugin.version}</version>
-            <configuration>
-              <threshold>Normal</threshold>
-              <effort>Default</effort>
-            </configuration>
-          </plugin>
-          -->
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-pmd-plugin</artifactId>
-            <version>${pmd-plugin.version}</version>
-            <configuration>
-              <!-- <aggregate>${aggregate}</aggregate> -->
-              <aggregate>false</aggregate>
-              <targetJdk>${java.source.version}</targetJdk>
-              <linkXref>true</linkXref>
-              <sourceEncoding>UTF-8</sourceEncoding>
-              <rulesets>
-                <ruleset>file:///${basedir}/${parent-path}/src/settings/pmd.xml</ruleset>
-              </rulesets>
-            </configuration>
-            <reportSets>
-              <reportSet>
-                <reports>
-                  <report>pmd</report>
-                  <report>cpd</report>
-                </reports>
-              </reportSet>
-            </reportSets>
-          </plugin>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>taglist-maven-plugin</artifactId>
-            <version>${taglist-plugin.version}</version>
-            <configuration>
-              <tagListOptions>
-                <tagClasses>
-                  <tagClass>
-                    <displayName>Problems to fix</displayName>
-                    <tags>
-                      <tag>
-                        <matchString>FIXME</matchString>
-                        <matchType>ignoreCase</matchType>
-                      </tag>
-                    </tags>
-                  </tagClass>
-                  <tagClass>
-                    <displayName>Functionalities to implement</displayName>
-                    <tags>
-                      <tag>
-                        <matchString>TODO</matchString>
-                        <matchType>ignoreCase</matchType>
-                      </tag>
-                    </tags>
-                  </tagClass>
-                  <tagClass>
-                    <displayName>Implementation notes</displayName>
-                    <tags>
-                      <tag>
-                        <matchString>XXX</matchString>
-                        <matchType>ignoreCase</matchType>
-                      </tag>
-                    </tags>
-                  </tagClass>
-                </tagClasses>
-              </tagListOptions>
-              <multiLineComments>true</multiLineComments>
-              <sourceDirectory>${basedir}</sourceDirectory>
-              <showEmptyDetails>true</showEmptyDetails>
-              <emptyComments>true</emptyComments>
-              <!-- <aggregate>${aggregate}</aggregate> -->
-              <aggregate>false</aggregate>
-              <linkXRef>true</linkXRef>
-              <xrefLocation>${project.reporting.outputDirectory}/xref</xrefLocation>
-            </configuration>
-          </plugin>
-        </plugins>
-      </reporting>
-    </profile>
-
-    <!-- Enable this profile (-P changelog) if you have an SVN account and you want to produce
-    changelog reports. Note that you need also to set properties kssvn.username and
-    kssvn.password in order to allow Maven to access the SVN repository; those properties may
-    be set in a user-level settings.xml file. -->
-    <profile>
-      <id>changelog</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-      </activation>
-      <reporting>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-changelog-plugin</artifactId>
-            <version>${changelog-plugin.version}</version>
-            <inherited>false</inherited>
-            <configuration>
-              <username>${kssvn.user}</username>
-              <password>${kssvn.password}</password>
-              <type>range</type>
-              <range>30</range><!-- last 30 days -->
-            </configuration>
-            <reportSets>
-              <reportSet>
-                <reports>
-                  <report>changelog</report>
-                  <report>dev-activity</report>
-                  <report>file-activity</report>
-                </reports>
-              </reportSet>
-            </reportSets>
-          </plugin>
         </plugins>
       </reporting>
     </profile>
   </profiles>
-
+  
   <properties>
     <!-- Paths -->
     <parent-path>.</parent-path>
