Javadoc and source pom update

--- a/pom.xml
+++ b/pom.xml
@@ -1056,6 +1056,14 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
           <version>${source-plugin.version}</version>
+          <executions>
+            <execution>
+              <id>attach-sources</id>
+              <goals>
+                <goal>jar-no-fork</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -1175,14 +1183,15 @@
             <quiet>true</quiet>
             <excludePackageNames>*.internal</excludePackageNames>
           </configuration>
+          <executions>
+            <execution>
+              <id>attach-javadocs</id>
+              <goals>
+                <goal>jar</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin>
-        <!--
-        <plugin>
-          <groupId>com.google.code.maven-replacer-plugin</groupId>
-          <artifactId>replacer</artifactId>
-          <version>${replacer-plugin.version}</version>
-        </plugin>
-        -->
       </plugins>
     </pluginManagement>
 
