--- a/ks-server/pom.xml
+++ b/ks-server/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>eu.fbk.knowledgestore</groupId>
     <artifactId>ks</artifactId>
-    <version>1.2</version>
+    <version>1.3-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
