--- a/ks-populator-naf/pom.xml
+++ b/ks-populator-naf/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>eu.fbk.knowledgestore</groupId>
     <artifactId>ks</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <version>1.3</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
