Revert "Updated authors list"
This reverts commit 3d9accdab6bd1fc839f21329f39785ab1e614e6e.

--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,15 @@
             </properties>
         </developer>
         <developer>
+            <id>corcoglio</id>
+            <name>Francesco Corcoglioniti</name>
+            <email>corcoglio@fbk.eu</email>
+            <roles>
+                <role>Developer</role>
+            </roles>
+            <timezone>+1</timezone>
+        </developer>
+        <developer>
             <id>aprosio</id>
             <name>Alessio Palmero Aprosio</name>
             <email>aprosio@fbk.eu</email>
