--- a/ks-populator-rdf/pom.xml
+++ b/ks-populator-rdf/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>eu.fbk.knowledgestore</groupId>
     <artifactId>ks</artifactId>
-    <version>1.3.2</version>
+    <version>1.4-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
