--- a/ks-tool/pom.xml
+++ b/ks-tool/pom.xml
@@ -71,8 +71,8 @@
             <artifactId>commons-math3</artifactId>
         </dependency>
         <dependency>
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
+            <groupId>eu.fbk.rdfpro</groupId>
+            <artifactId>rdfpro-core</artifactId>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
